<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:background="@drawable/arkazemin"
    android:stretchColumns="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    
    
    
 <!-- 1.Satır -->
    <TableRow >

        <TextView
            android:id="@+id/txtLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/kdvsiz"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/txtTutar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:numeric="decimal" />
    </TableRow>

<!-- 2.Satır -->
    <TableRow >

        <TextView
            android:id="@+id/txtLbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="Kişi Sayısı"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/txtKisiSayisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="3"
            android:numeric="integer" />
    </TableRow>

<!-- 3.Satır -->
    <TableRow >

        <TextView
            android:id="@+id/txtLbl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtYuzde"
            android:textSize="22dp" />
    </TableRow>

 <!-- 4.Satır -->
    <TableRow >

        <RadioGroup
            android:id="@+id/RadioGroupKdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="3"
            android:checkedButton="@+id/radioYirmi"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioOnBes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxt15"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioYirmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxt20"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioBaska"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxtBaska"
                android:textSize="15sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtElleGirilenYuzdeOrani"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numeric="decimal" />
    </TableRow>

<!-- 5.Satır -->
    <TableRow >

        <Button
            android:id="@+id/btnTemizle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/btnTemizle" />

        <Button
            android:id="@+id/btnHesapla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/btnHesapla" />
    </TableRow>

<!-- 6.Satır -->         
    <TableRow
        android:paddingBottom="10dip"
        android:paddingTop="5dip" >

        <TextView
            android:id="@+id/txtLbl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="KDV" />

        <TextView
            android:id="@+id/txtKdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2" />
    </TableRow>

<!-- 7.Satır -->       
    <TableRow
        android:paddingBottom="10dip"
        android:paddingTop="5dip" >

        <TextView
            android:id="@+id/txtLbl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="Toplam Tutar" />

        <TextView
            android:id="@+id/txtToplamOdenecekTutar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2" />
    </TableRow>
    
        
 <!-- 8.Satır -->   
    <TableRow
        android:paddingBottom="10dip"
        android:paddingTop="5dip" >

        <TextView
            android:id="@+id/txtLbl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="Kişi Başı" />

        <TextView
            android:id="@+id/txtKisiSayisiOdenecekMiktar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2" />
    </TableRow>
    

</TableLayout>